<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="schemas.android.com/apk/res-auto"
    xmlns:mstb="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="edu.uiowa.tsz.drivingapp.MainActivity"
    android:id="@+id/logging_root_container">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="schemas.android.com/apk/res-auto"
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        android:elevation="8dp"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/logging_inactive_rl"
        android:visibility="gone"
        android:layout_below="@id/action_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:text="@string/view_saved_records"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/show_records_button"
            android:layout_above="@+id/grant_location_permissions_button"
            android:onClick="showRecordsListActivity" />

        <Button
            android:text="@string/grant_location_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grant_location_permissions_button"
            android:layout_above="@+id/logging_toggle_button"
            android:onClick="locationPermissionButtonTouched" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_logging"
            android:id="@+id/logging_toggle_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="toggleLoggingButtonTouched" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/logging_active_rl"
        android:visibility="visible"
        android:layout_below="@id/action_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/driving_pane">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/data_cardinal_direction_progressBar"
                android:layout_alignRight="@+id/cardinal_direction_label"
                android:layout_alignTop="@+id/cardinal_direction_label"
                android:layout_alignBottom="@+id/cardinal_direction_label"
                android:layout_alignLeft="@+id/cardinal_direction_label" />

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/data_velocity_progressBar"
                android:layout_alignTop="@+id/data_velocity_tv"
                android:layout_alignBottom="@+id/data_velocity_tv"
                android:layout_alignRight="@+id/data_velocity_tv"
                android:layout_alignLeft="@+id/data_velocity_tv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cardinal_direction_label"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/data_velocity_tv"
                android:textSize="36sp"
                android:layout_alignTop="@+id/data_velocity_tv"
                android:layout_alignBottom="@+id/data_velocity_tv"
                android:layout_centerVertical="false"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="false"
                android:textStyle="normal|bold"
                android:textColor="@android:color/white"
                android:text="@string/data_sample_cardinal_direction"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/data_sample_velocity"
                android:id="@+id/data_velocity_tv"
                android:textSize="72sp"
                android:gravity="center_horizontal"
                android:layout_alignParentLeft="true"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_mph"
                android:id="@+id/label_miles_per_hour"
                android:gravity="center"
                android:layout_toRightOf="@+id/data_velocity_tv"
                android:layout_alignBaseline="@+id/data_velocity_tv" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/driving_pane"
            android:layout_above="@+id/road_type_pane"
            android:weightSum="1"
            android:id="@+id/road_hazard_pane">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_weight="0.5">

                <Button
                    android:text="@string/hard_bump_hazard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/hard_bump_hazard_button"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/sharp_corner_hazard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sharp_corner_hazard_button"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_weight="0.5">

                <Button
                    android:text="@string/sudden_stop_hazard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sudden_stop_hazard_button"
                    android:layout_weight="1"
                    android:textSize="14sp" />

                <Button
                    android:text="@string/hard_acceleration_hazard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/hard_acceleration_hazard_button"
                    android:layout_weight="1"
                    android:textSize="14sp" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/road_type_pane"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/road_composition_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                mstb:values="@array/road_type_array"/>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

